src/test/resources/SemanticAnalysis/negative/AttributeOtherClass1.ls
class A {

  p ("") {
    this.a = 13;
  }

}

class B {

  inh a : int;

  p ("") {}

}
